pagina empelo con media

--- a/index.html
+++ b/index.html
@@ -19,51 +19,52 @@
 </head>
 
 <body>
-    <div class="navegador">
-        <div class="navegador-logo col-12 col-md-3 ">
-            <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
-        </div>
-        <nav class="navegador-contenedor col-3 col-md-6">
-            <div class="dropdown navegador-menu d-block d-md-none">
-                <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    <img src="../multimedia/img/menu_hambueguesa.svg">
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
-                    <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
-                    <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
-                </ul>
+    <header>
+        <div class="navegador">
+            <div class="navegador-logo col-12 col-md-3 ">
+                <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
-                <ul class="navegador-ul-lista">
-                    <!-- <li><a href="../index.html">Inicio</a></li>
+            <nav class="navegador-contenedor col-3 col-md-6">
+                <div class="dropdown navegador-menu d-block d-md-none">
+                    <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <img src="../multimedia/img/menu_hambueguesa.svg">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+                        <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
+                        <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
+                    </ul>
+                </div>
+                <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
+                    <ul class="navegador-ul-lista">
+                        <!-- <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./Info.html">Info</a></li> -->
-                    <li><a href="./pages/productos.html">Productos</a></li>
-                    <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="./pages/empleo.html" target="_blank">Empleo</a></li>
-                </ul>
-            </div>
-        </nav>
+                        <li><a href="./pages/productos.html">Productos</a></li>
+                        <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                        <li><a href="./pages/empleo.html" target="_blank">Empleo</a></li>
+                    </ul>
+                </div>
+            </nav>
 
-        <div class="navegador-icono col-12 col-md-3">
-            <div class="navegador-icono-contenedor">
-                <button class="navegador-boton-icono">
-                    <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
-                </button>
-                <button class="navegador-boton-icono">
-                    <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
-                </button>
-                <button class="navegador-boton-icono">
-                    <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
-                </button>
+            <div class="navegador-icono col-12 col-md-3">
+                <div class="navegador-icono-contenedor">
+                    <button class="navegador-boton-icono">
+                        <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
+                    </button>
+                    <button class="navegador-boton-icono">
+                        <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
+                    </button>
+                    <button class="navegador-boton-icono">
+                        <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="banner-promociones">
-        <p class="banner-promociones-titulo"> Rebajas</p> 
-        <p class="banner-promociones-titulo-numero">&nbsp;50%</p>
-    </div>
+        <div class="banner-promociones">
+            <p class="banner-promociones-titulo"> Rebajas</p>
+            <p class="banner-promociones-titulo-numero">&nbsp;50%</p>
+        </div>
 
     </header>
     <div class="banner-rebajas">
@@ -71,7 +72,7 @@
     </div>
     <main>
         <div class="contenedor-tarjetamaestra container px-0">
-            <h2 class="contenedor-titulo-secciones">ESPECIALES</h2> 
+            <h2 class="contenedor-titulo-secciones">ESPECIALES</h2>
             <div class="contenedor-tarjeta-producto">
                 <div class="col-12 col-md-3 p-2">
                     <div class="tarjeta-producto mx-auto">
@@ -80,12 +81,14 @@
                         </div>
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Robusta</p>
-                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta,
+                                perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
                                 cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
                                 del mar, a diferencia del arábica que se cultiva entre los 800 y los 2100 metros. </p>
-                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> El Congo</p>
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> El
+                                Congo</p>
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
@@ -100,11 +103,13 @@
                         </div>
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Java</p>
-                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el
+                                siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
                                 con toques picantes y que deja una sensación de dulzor en el paladar.</p>
-                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> Indonesia</p>
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span>
+                                Indonesia</p>
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
@@ -119,11 +124,13 @@
                         </div>
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café arábica</p>
-                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos principales
+                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos
+                                principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
                                 tienes de llevarte a los labios siempre que te tomes una taza.</p>
-                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> Arabia Saudí
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span>
+                                Arabia Saudí
                             </p>
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
@@ -139,11 +146,13 @@
                         </div>
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Tarrazú</p>
-                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es
+                                otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
                                 ligeramente ácido y con sabor parecido al del chocolate.</p>
-                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> Costa Rica
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span>
+                                Costa Rica
                             </p>
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
