--- a/pages/historia.html
+++ b/pages/historia.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kofe</title>
+    <meta name="description" content="Quienes somos">
+    <meta name="keywords" content="cafe, molido, natural, grano, compra al mayor">
     <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
@@ -23,55 +25,55 @@
 
 <body>
     <header>
-        <div class="navegador-paginas">
-            <div class="logo-principal-blanco col-12 col-md-3 ">
+        <div class="navegador">
+            <div class="navegador-logo col-12 col-md-3 ">
                 <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="contenedor-nav-paginas col-3 col-md-6">
-                <div class="dropdown menu-ham-paginas d-block d-md-none">
+            <nav class="navegador-contenedor col-3 col-md-6">
+                <div class="dropdown navegador-menu d-block d-md-none">
                     <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <img src="../multimedia/img/menu_hambueguesa.svg">
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./producto.html">Productos</a></li>
-                        <li><a class="dropdown-item" href="./trabajaconnosotros.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="./sobrenosotros.html">Nosotros</a></li>
+                        <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+                        <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
+                        <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
                     </ul>
                 </div>
-                <div class="ul-contenedor col-9 col-md-auto d-none d-md-flex">
-                    <ul class="nav-lista">
+                <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
+                    <ul class="navegador-ul-lista">
                         <!-- <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="./Info.html">Info</a></li> -->
-                        <li><a href="./productos.html">Productos</a></li>
-                        <li><a href="./nosotros.html">Nosotros</a></li>
-                        <li><a href="./empleo.html" target="_blank">Empleo</a></li>
+                    <li><a href="./Info.html">Info</a></li> -->
+                        <li><a href="./pages/productos.html">Productos</a></li>
+                        <li><a href="./pages/historia.html">Nosotros</a></li>
+                        <li><a href="./pages/empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
             </nav>
 
-            <div class="iconos-del-nav col-12 col-md-3">
-                <div class="contendor-iconos-nav">
-                    <button class="boton-icono-nav">
+            <div class="navegador-icono col-12 col-md-3">
+                <div class="navegador-icono-contenedor">
+                    <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
                     </button>
-                    <button class="boton-icono-nav">
+                    <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
                     </button>
-                    <button class="boton-icono-nav">
+                    <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
                     </button>
                 </div>
             </div>
         </div>
     </header>
-    <div class="banner-rebajas">
-        <p>Envios gratis a partir de 30€ de pedido</p>
-    </div>
 
     <main>
-        <div>
-
+        <div class="banner-historia">
+            <div class="banner-historia-cotenedor container">
+                <div><img src="" alt=""></div>
+                </div>
+            </div>
         </div>
         <aside>
 
@@ -83,7 +85,9 @@
         </div>
     </footer> -->
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 
 </body>
