--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kofe</title>
+    <meta name="description" content="Quienes somos">
+    <meta name="keywords" content="cafe, molido, natural, grano, compra al mayor">
     <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
 </head>
-
 
 <body>
     <header>
@@ -47,8 +48,8 @@
                 </div>
             </nav>
 
-            <div class="navegador-iconos col-12 col-md-3">
-                <div class="navegador-iconos-contenedor">
+            <div class="navegador-icono col-12 col-md-3">
+                <div class="navegador-icono-contenedor">
                     <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
                     </button>
@@ -68,8 +69,8 @@
 
 
     <main>
-        <div class="contenedor-tarjetas container px-0 py-5">
-            <div class="contenedor-tarjetas-producto">
+        <div class="contenedor-tarjetamaestra container px-0 py-5">
+            <div class="contenedor-tarjeta-producto">
                 <div class=" col-12 col-md-3 p-2">
                     <div class="tarjeta-producto mx-auto">
                         <div class="tarjeta-producto-imagen">
@@ -78,7 +79,7 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Robusta</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta, perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
                                 cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
@@ -90,20 +91,20 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-02.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Java</p>
+                            <p class="tarjeta-producto-titulo mb-0">Café Java</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
                                 con toques picantes y que deja una sensación de dulzor en el paladar.</p>
@@ -114,20 +115,20 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-03.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
+                            <p class="tarjeta-producto-titulo  mb-0">Café arábica</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales
+                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
                                 tienes de llevarte a los labios siempre que te tomes una taza.</p>
@@ -138,20 +139,20 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-04.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
+                            <p class="tarjeta-producto-titulo mb-0">Café Tarrazú</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
                                 ligeramente ácido y con sabor parecido al del chocolate.</p>
@@ -162,20 +163,20 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/lata_de_cafe_vertical.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
+                            <p class="tarjeta-producto-titulo mb-0">Café Robusta</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta, perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
                                 cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
@@ -187,20 +188,20 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/lata_de_cafe_vertical.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Java</p>
+                            <p class="tarjeta-producto-titulo mb-0">Café Java</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
                                 con toques picantes y que deja una sensación de dulzor en el paladar.</p>
@@ -211,20 +212,20 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/lata_de_cafe_vertical.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
+                            <p class="tarjeta-producto-titulo mb-0">Café arábica</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales
+                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
                                 tienes de llevarte a los labios siempre que te tomes una taza.</p>
@@ -235,20 +236,20 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/lata_de_cafe_vertical.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
+                            <p class="tarjeta-producto-titulo mb-0">Café Tarrazú</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
                                 ligeramente ácido y con sabor parecido al del chocolate.</p>
@@ -259,8 +260,8 @@
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
