--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
                         <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
+                        <li><a class="dropdown-item" href="./pages/historia.html">Nosotros</a></li>
                     </ul>
                 </div>
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
@@ -41,7 +41,7 @@
                         <!-- <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./Info.html">Info</a></li> -->
                         <li><a href="./pages/productos.html">Productos</a></li>
-                        <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                        <li><a href="./pages/historia.html">Nosotros</a></li>
                         <li><a href="./pages/empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
@@ -227,7 +227,9 @@
             </div>
         </div>
         <div class="chat-ayuda">
-            <img src="./multimedia/img/Group 175.png" alt="">
+            <div data-aos="fade-down">
+                <img src="./multimedia/img/Group 175.png" alt="">
+            </div>
         </div>
     </main>
     <footer>
