--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -34,7 +34,7 @@
                     <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./productos.html">Productos</a></li>
                     <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
-                    <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
+                    <li><a class="dropdown-item" href="./historia.html">Nosotros</a></li>
                     </ul>
                 </div>
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
@@ -42,7 +42,7 @@
                         <!-- <li><a href="../index.html">Inicio</a></li>
                         <li><a href="./Info.html">Info</a></li> -->
                         <li><a href="./productos.html">Productos</a></li>
-                        <li><a href="./nosotros.html">Nosotros</a></li>
+                        <li><a href="./historia.html">Nosotros</a></li>
                         <li><a href="./empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
@@ -100,7 +100,7 @@
             <div class="col-12 col-md-4">
                 <div class="contenedor-formularios-foto">
                     <img src="../multimedia/img/imagen-empleo-usuario.png" class="rounded float-start" alt="...">
-                    <button type="button" class="btn btn-boton-subir-foto px-4">Subir foto</button>
+                    <button type="button" class="btn btn-boton-subir px-4">Subir foto</button>
                 </div>
             </div>
             <div class="col-12 col-md-8">
