--- a/pages/historia.html
+++ b/pages/historia.html
@@ -36,18 +36,18 @@
                         <img src="../multimedia/img/menu_hambueguesa.svg">
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
-                        <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
+                        <li><a class="dropdown-item" href="../pages/productos.html">Productos</a></li>
+                        <li><a class="dropdown-item" href="../pages/empleo.html">Empleo</a></li>
+                        <li><a class="dropdown-item" href="../pages/historia.html">Historia</a></li>
                     </ul>
                 </div>
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
                     <ul class="navegador-ul-lista">
                         <!-- <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./Info.html">Info</a></li> -->
-                        <li><a href="./pages/productos.html">Productos</a></li>
-                        <li><a href="./pages/historia.html">Nosotros</a></li>
-                        <li><a href="./pages/empleo.html" target="_blank">Empleo</a></li>
+                        <li><a href="../pages/productos.html">Productos</a></li>
+                        <li><a href="../pages/historia.html">Historia</a></li>
+                        <li><a href="../pages/empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
             </nav>
@@ -70,20 +70,52 @@
 
     <main>
         <div class="banner-historia">
-            <div class="banner-historia-cotenedor container">
+            <div class="banner-historia-contenedor container">
                 <div><img src="" alt=""></div>
+            </div>
+        </div>
+        </div>
+        <div class="historia">
+            <div class="historia-titulo">
+                <h1>Hitos</h1>
+            </div>
+            <div class="historia-texto">
+                <p class="texto">
+                    Convertir una modesta hacienda familiar en una empresa internacional de café solo es posible con una
+                    trayectoria marcada por decisiones valientes. Tenemos siempre presente de dónde venimos. La visión
+                    que nos guía desde el inicio con nuestro fundador, Pedro Pedraza, hasta hoy, ha seguido una
+                    evolución constante y dinámica. Nuestro carácter inconformista y emprendedor, sin embargo, sigue
+                    siendo el mismo del primer día.
+                </p>
+            </div>
+            <div class="contenedor container col-12 m-0 p-0 ">
+                <div class="contenedor-historia-foto">
+                    <div class=" historia-foto col-6 m-0 p-0">
+                        <img src="../multimedia/img/historia-1.jpg" alt="">
+                    </div>
+                    <div class=" historia-foto col-6 m-0 p-0">
+                        <img src="../multimedia/img/historia-2.jpg" alt="">
+                    </div>
                 </div>
+            </div>
+            <div class="historia-texto">
+                <p class="texto">
+                    Nos esforzamos por asegurar que cada taza de café que se sirve sea de la más alta calidad, por lo que trabajamos en estrecha colaboración con nuestros proveedores y hacemos pruebas regulares de sabor para garantizar que cada lote de café cumpla con nuestros estándares. Además, también nos aseguramos de que nuestros empleados reciban capacitación constante para mejorar sus habilidades y conocimientos en la producción del café.
+                </p>
+                <h5>
+                    Estamos orgullosos de nuestra empresa y del esfuerzo de nuestros empleados, quienes se dedican día a día a entregar el mejor café.
+                </h5>
             </div>
         </div>
         <aside>
 
         </aside>
     </main>
-    <!-- <footer>
-        <div>
+    <footer>
+        <!-- <div>
             <p class="texto-del-footer"> escribe un correo con tus dudas</p>
-        </div>
-    </footer> -->
+        </div> -->
+    </footer>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
