paginas con mediaQ

--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -34,7 +34,7 @@
                     <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./productos.html">Productos</a></li>
                     <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
-                    <li><a class="dropdown-item" href="./historia.html">Nosotros</a></li>
+                    <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
                     </ul>
                 </div>
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
@@ -42,7 +42,7 @@
                         <!-- <li><a href="../index.html">Inicio</a></li>
                         <li><a href="./Info.html">Info</a></li> -->
                         <li><a href="./productos.html">Productos</a></li>
-                        <li><a href="./historia.html">Nosotros</a></li>
+                        <li><a href="./historia.html">Historia</a></li>
                         <li><a href="./empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
@@ -152,7 +152,9 @@
             Somos lo que bebes antes de ir a trabajar, en el break del dia, o en las tardes con tus amigos. El trabajo en equipo, la inquietud, la diversidad, la sostenibilidad y la humildad mueven a nuestras más de 144.000 personas que forman parte del grupo Kofe. 
         </p>
     </div>
-
+    <div class="chat-ayuda">
+        <img src="../multimedia/img/Group 175.png" alt="">
+    </div>
         <aside>
         </aside>
 
