--- a/pages/historia.html
+++ b/pages/historia.html
@@ -107,8 +107,10 @@
                 </h5>
             </div>
         </div>
+        <div class="chat-ayuda">
+            <img src="../multimedia/img/Group 175.png" alt="">
+        </div>
         <aside>
-
         </aside>
     </main>
     <footer>
