--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,7 +34,7 @@
                         <li><a class="dropdown-item" href="../index.html">Home</a></li>
                         <!-- <li><a class="dropdown-item" href="./producto.html">Productos</a></li> -->
                         <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="./historia.html">Nosotros</a></li>
+                        <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
                     </ul>
                 </div>
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
@@ -42,7 +42,7 @@
                         <li><a href="../index.html">Home</a></li>
                         <!-- <li><a href="./Info.html">Info</a></li> -->
                         <!-- <li><a href="../productos.html">Productos</a></li> -->
-                        <li><a href="./historia.html">Nosotros</a></li>
+                        <li><a href="./historia.html">Historia</a></li>
                         <li><a href="./empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
