--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="navegador">
             <div class="navegador-logo col-12 col-md-3 ">
-                <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
+                <a href="../index.html" alt="volver al inicio"><img src="./multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
             <nav class="navegador-contenedor col-3 col-md-6">
                 <div class="dropdown navegador-menu d-block d-md-none">
@@ -50,13 +50,13 @@
             <div class="navegador-icono col-12 col-md-3">
                 <div class="navegador-icono-contenedor">
                     <button class="navegador-boton-icono">
-                        <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
+                        <img src="./multimedia/img/🦆 icon _search_.svg" alt="">
                     </button>
                     <button class="navegador-boton-icono">
-                        <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
+                        <img src="./multimedia/img/🦆 icon _person_.svg" alt="">
                     </button>
                     <button class="navegador-boton-icono">
-                        <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
+                        <img src="./multimedia/img/🦆 icon _shopping cart_.svg" alt="">
                     </button>
                 </div>
             </div>
