--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="contenedor-tarjetamaestra container px-0">
             <h2 class="contenedor-titulo-secciones">ESPECIALES</h2>
             <div class="contenedor-tarjeta-producto">
-                <div class="col-12 col-md-3 p-2">
+                <div class="col-12 col-md-3">
                     <div class="tarjeta-producto mx-auto">
                         <div class="tarjeta-producto-imagen">
                             <img src="./multimedia/img/cafe-granos-01.png">
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 p-2">
+                <div class="col-12 col-md-3">
                     <div class="tarjeta-producto mx-auto">
                         <div class="tarjeta-producto-imagen">
                             <img src="./multimedia/img/cafe-granos-02.png">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 p-2">
+                <div class="col-12 col-md-3">
                     <div class="tarjeta-producto mx-auto">
                         <div class="tarjeta-producto-imagen">
                             <img src="./multimedia/img/cafe-granos-03.png">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 p-2">
+                <div class="col-12 col-md-3">
                     <div class="tarjeta-producto mx-auto">
                         <div class="tarjeta-producto-imagen content">
                             <img src="./multimedia/img/cafe-granos-04.png">
