--- a/pages/historia.html
+++ b/pages/historia.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         </div>
-        <div class="historia">
+        <div class="historia container">
             <div class="historia-titulo">
                 <h1>Hitos</h1>
             </div>
@@ -88,12 +88,12 @@
                     siendo el mismo del primer día.
                 </p>
             </div>
-            <div class="contenedor container col-12 m-0 p-0 ">
+            <div class="contenedor container m-0 p-0 ">
                 <div class="contenedor-historia-foto">
-                    <div class=" historia-foto col-6 m-0 p-0">
+                    <div class=" historia-foto col-12 col-md6 m-0 p-0">
                         <img src="../multimedia/img/historia-1.jpg" alt="">
                     </div>
-                    <div class=" historia-foto col-6 m-0 p-0">
+                    <div class=" historia-foto col-12 col-md6 m-0 p-0">
                         <img src="../multimedia/img/historia-2.jpg" alt="">
                     </div>
                 </div>
