detalles del navbar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <!-- <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./Info.html">Info</a></li> -->
                         <li><a href="./pages/productos.html">Productos</a></li>
-                        <li><a href="./pages/historia.html">Nosotros</a></li>
+                        <li><a href="./pages/historia.html">Historia</a></li>
                         <li><a href="./pages/empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
@@ -68,7 +68,7 @@
 
     </header>
     <div class="banner-rebajas">
-        <p>Envios gratis a partir de 30€ de pedido</p>
+        <h6>Envios gratis a partir de 30€ de pedido</h6>
     </div>
     <main>
         <div class="contenedor-tarjetamaestra container px-0">
