--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <div class="banner-rebajas">
-        <p>Envios gratis a partir de 30€ de pedido</p>
+        <h6>Envios gratis a partir de 30€ de pedido</h6>
     </div>
     </header>
     <main>
