--- a/index.html
+++ b/index.html
@@ -161,8 +161,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- <hr class="linea-horizontal-secciones"> -->
             </div>
         </div>
 
@@ -171,10 +169,6 @@
             <div class="contenedor-tarjeta-receta">
                 <div class=" col-12 col-md-4 p-2 ">
                     <div class="tarjeta-receta mx-auto">
-                        <!-- <video width="320" height="240" controls>
-                            <source src="https://res.cloudinary.com/elizapardo/video/upload/v1678816662/Web%20Kofe/production_ID_4378109_kotro2.mp4" type="video/mp4">
-                          Your browser does not support the video tag.
-                          </video> -->
                         <div class="tarjeta-receta-icono-play">
                             <img src="./multimedia/img/🦆 icon _play circle.png" alt="">
                         </div>
@@ -228,7 +222,29 @@
         </div>
         <div class="chat-ayuda">
             <div data-aos="fade-down">
-                <img src="./multimedia/img/Group 175.png" alt="">
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    <img src="./multimedia/img/Group 175.png" alt="">
+                </button>
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Contactanos por WhatsApp</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Escribenos tus dudas
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar WhatsApp</button>
+                                <button type="button" class="btn btn-primary">Abrir en el ordenador</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </main>
