alineacion de pagina empleo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
                         <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="./pages/historia.html">Nosotros</a></li>
+                        <li><a class="dropdown-item" href="./pages/historia.html">Historia</a></li>
                     </ul>
                 </div>
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
