--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -32,9 +32,9 @@
                         <img src="../multimedia/img/menu_hambueguesa.svg">
                     </button>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./productos.html">Productos</a></li>
-                    <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
-                    <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
+                        <li><a class="dropdown-item" href="./productos.html">Productos</a></li>
+                        <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
+                        <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
                     </ul>
                 </div>
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
@@ -144,49 +144,79 @@
                 </div>
             </div>
         </div>
-    <div class="container nos-encanta">
-        <h1 class="titulo-trabajo col-md-4 ">
-            Nos encanta lo que hacemos
-        </h1>
-        <p class=" texto-trabajo col-md-8">
-            Somos lo que bebes antes de ir a trabajar, en el break del dia, o en las tardes con tus amigos. El trabajo en equipo, la inquietud, la diversidad, la sostenibilidad y la humildad mueven a nuestras más de 144.000 personas que forman parte del grupo Kofe. 
-        </p>
-    </div>
-    <div class="chat-ayuda">
-        <div data-aos="fade-down">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                <img src="../multimedia/img/Group 175.png" alt="">
-            </button>
-            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Contactanos por WhatsApp</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Escribenos tus dudas
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar WhatsApp</button>
-                            <button type="button" class="btn btn-primary">Abrir en el ordenador</button>
+        <div class="container nos-encanta">
+            <h1 class="titulo-trabajo col-md-4 ">
+                Nos encanta lo que hacemos
+            </h1>
+            <p class=" texto-trabajo col-md-8">
+                Somos lo que bebes antes de ir a trabajar, en el break del dia, o en las tardes con tus amigos. El
+                trabajo en equipo, la inquietud, la diversidad, la sostenibilidad y la humildad mueven a nuestras más de
+                144.000 personas que forman parte del grupo Kofe.
+            </p>
+        </div>
+        <div class="chat-ayuda">
+            <div data-aos="fade-down">
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    <img src="../multimedia/img/Group 175.png" alt="">
+                </button>
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Contactanos por WhatsApp</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Escribenos tus dudas
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar
+                                    WhatsApp</button>
+                                <button type="button" class="btn btn-primary">Abrir en el ordenador</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
         <aside>
         </aside>
 
     </main>
-    <footer>
-        <!-- <div>
-            <p class="texto-del-footer"> escribe un correo con tus dudas</p>
-        </div> -->
+    <footer class=" col-12 ">
+        <div class="columna1">
+            <div class="columna1-iconos-redes col-md-6 ">
+                <img src="../multimedia/img/icono-facebook.png" alt="">
+                <img src="../multimedia/img/icono-instagram.png" alt="">
+                <img src="../multimedia/img/icono-linkedin.png" alt="">
+            </div>
+            <h6>
+                SUSCRÍBETE PARA RECIBIR OFERTAS EXCLUSIVAS Y PROMOCIONES:
+            </h6>
+            <div class="input-group mb-6">
+                <span class="input-group-text">Suscribirse</span>
+                <div class="form-floating">
+                  <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                  <label for="floatingInputGroup1">Email</label>
+                </div>
+              </div>
+        </div>
+        <div class="columna2">
+            <h6>
+                Metodo de pago:
+            </h6>
+            <div class="columna2-iconos-pago col-md-6">
+                <img src="../multimedia/img/icono-tarjeta-visa.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-martercard.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-paypal.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-americanexpress.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-banco.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-apple.png" alt="">
+            </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
