footer y alineacion tarjetas

--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -77,17 +77,19 @@
                     <div class="col-12 col-md-5 pr-4 mb-2">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>Puestos</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option value="1">Barista</option>
+                            <option value="2">Recolector</option>
+                            <option value="3">Marketing</option>
+                            <option value="4">Camarera</option>
                         </select>
                     </div>
                     <div class="col-12 col-md-5 px-4 mb-2">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>Ciudades</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option value="1">Madrid</option>
+                            <option value="2">Barcelona</option>
+                            <option value="3">Valencia</option>
+                            <option value="4">A Coruña</option>
                         </select>
                     </div>
                     <div class="col-12 col-md-2 pl-4 mb-2">
@@ -186,9 +188,9 @@
         </aside>
 
     </main>
-    <footer class=" col-12 ">
+    <footer>
         <div class="columna1">
-            <div class="columna1-iconos-redes col-md-6 ">
+            <div class="columna1-iconos-redes col-md-6">
                 <img src="../multimedia/img/icono-facebook.png" alt="">
                 <img src="../multimedia/img/icono-instagram.png" alt="">
                 <img src="../multimedia/img/icono-linkedin.png" alt="">
@@ -196,7 +198,7 @@
             <h6>
                 SUSCRÍBETE PARA RECIBIR OFERTAS EXCLUSIVAS Y PROMOCIONES:
             </h6>
-            <div class="input-group mb-6">
+            <div class="input-group">
                 <span class="input-group-text">Suscribirse</span>
                 <div class="form-floating">
                   <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
