--- a/pages/historia.html
+++ b/pages/historia.html
@@ -114,9 +114,36 @@
         </aside>
     </main>
     <footer>
-        <!-- <div>
-            <p class="texto-del-footer"> escribe un correo con tus dudas</p>
-        </div> -->
+        <div class="columna1">
+            <div class="columna1-iconos-redes col-md-6">
+                <img src="../multimedia/img/icono-facebook.png" alt="">
+                <img src="../multimedia/img/icono-instagram.png" alt="">
+                <img src="../multimedia/img/icono-linkedin.png" alt="">
+            </div>
+            <h6>
+                SUSCRÍBETE PARA RECIBIR OFERTAS EXCLUSIVAS Y PROMOCIONES:
+            </h6>
+            <div class="input-group">
+                <span class="input-group-text">Suscribirse</span>
+                <div class="form-floating">
+                  <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                  <label for="floatingInputGroup1">Email</label>
+                </div>
+              </div>
+        </div>
+        <div class="columna2">
+            <h6>
+                Metodo de pago:
+            </h6>
+            <div class="columna2-iconos-pago col-md-6">
+                <img src="../multimedia/img/icono-tarjeta-visa.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-martercard.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-paypal.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-americanexpress.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-banco.png" alt="">
+                <img src="../multimedia/img/icono-tarjeta-apple.png" alt="">
+            </div>
+        </div>
     </footer>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
