--- a/index.html
+++ b/index.html
@@ -248,38 +248,40 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div class="columna1">
-            <div class="columna1-iconos-redes col-md-6">
-                <img src="./multimedia/img/icono-facebook.png" alt="">
-                <img src="./multimedia/img/icono-instagram.png" alt="">
-                <img src="./multimedia/img/icono-linkedin.png" alt="">
-            </div>
-            <h6>
-                SUSCRÍBETE PARA RECIBIR OFERTAS EXCLUSIVAS Y PROMOCIONES:
-            </h6>
-            <div class="input-group">
-                <span class="input-group-text">Suscribirse</span>
-                <div class="form-floating">
-                  <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
-                  <label for="floatingInputGroup1">Email</label>
+    <footer class="mx-auto">
+        <div class="container d-md-flex">
+            <div class="columna1 col-md-6 d-flex justify-content-center col-12">
+                <div class="columna1-iconos-redes ">
+                    <img src="../multimedia/img/icono-facebook.png" alt="">
+                    <img src="../multimedia/img/icono-instagram.png" alt="">
+                    <img src="../multimedia/img/icono-linkedin.png" alt="">
+                    <h6>
+                        SUSCRÍBETE PARA RECIBIR OFERTAS EXCLUSIVAS Y PROMOCIONES:
+                    </h6>
+                    <div class="input-group">
+                        <span class="input-group-text">Suscribirse</span>
+                        <div class="form-floating">
+                          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                          <label for="floatingInputGroup1">Email</label>
+                        </div>
+                      </div>
                 </div>
-              </div>
-        </div>
-        <div class="columna2">
-            <h6>
-                Metodo de pago:
-            </h6>
-            <div class="columna2-iconos-pago col-md-6">
-                <img src="./multimedia/img/icono-tarjeta-visa.png" alt="">
-                <img src="./multimedia/img/icono-tarjeta-martercard.png" alt="">
-                <img src="./multimedia/img/icono-tarjeta-paypal.png" alt="">
-                <img src="./multimedia/img/icono-tarjeta-americanexpress.png" alt="">
-                <img src="./multimedia/img/icono-tarjeta-banco.png" alt="">
-                <img src="./multimedia/img/icono-tarjeta-apple.png" alt="">
+            </div>
+            <div class="columna2 col-md-6 col-12">
+                <h6>
+                    Metodo de pago:
+                </h6>
+                <div class="columna2-iconos-pago ">
+                    <img src="../multimedia/img/icono-tarjeta-visa.png" alt="">
+                    <img src="../multimedia/img/icono-tarjeta-martercard.png" alt="">
+                    <img src="../multimedia/img/icono-tarjeta-paypal.png" alt="">
+                    <img src="../multimedia/img/icono-tarjeta-americanexpress.png" alt="">
+                    <img src="../multimedia/img/icono-tarjeta-banco.png" alt="">
+                    <img src="../multimedia/img/icono-tarjeta-apple.png" alt="">
+                </div>
             </div>
         </div>
-    </footer>
+            </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
